--- a/google_homepage.html
+++ b/google_homepage.html
@@ -1,6 +1,8 @@
  <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="google.css"
+    <title> Google Skeleton </title>
   </head>
   <body>
     <nav id="Headings">
@@ -8,9 +10,8 @@
         <a href="">Gmail</a>
       </li>
       <li>
-        <a href=""Images</a>
+        <a href=""Images </a>
       </li>
-      Inserting Grid image later
       <li class="grid">
       </li>
       <li>
