--- a/google_homepage.html
+++ b/google_homepage.html
@@ -1,44 +1,66 @@
  <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="google.css"
+    <link rel="stylesheet" type="text/css" href="google.css">
     <title> Google Skeleton </title>
   </head>
   <body>
-    <nav id="Headings">
-       <li>
-        <a href="">Gmail</a>
-      </li>
-      <li>
-        <a href=""Images </a>
-      </li>
-      <li class="grid">
-      </li>
-      <li>
-        <button class="sign-in">Sign In</button>
-        <a href""</a>
+    <nav id="heading">
+      <div>
+          <ul>
+              <li>
+                <a href="">About</a>
+              </li>
+              <li>
+                <a href="">Store</a>
+              </li>
+            </ul>
+      </div>
+      <div>
+          <ul>
+              <li>
+                <a href="">Gmail</a>
+              </li>
+              <li>
+                  <a href="">Images</a>
+                </li>
+              <li>
+                  <button type="button" onclick="alert('Hello world!')">Sign In</button>
+              </li>
+            </ul>
+      </div>
+      
     </nav>
-    <div id= "searchbar">
-      <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo"/>
-    <form>
-      <input type="search" value= "">
-      <input type="submit" value="I feel lucky">
-      <input type="submit" value="Search">
-    </form>
+    <div id="search">
+      <div class="logo">
+        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo"/>
+      </div>
+      <div class= "searchbar">
+        <form>
+          <input type="search" value= "">
+          <div class="button-container">
+            <input type="submit" value="I feel lucky">
+            <input type="submit" value="Search">
+          </div>
+        </form>
+      </div>
     </div>
     <footer>
-     <ul class="left">
-       <li> 
-         <a href="">Advertising</a>
-       </li>
-       <li> 
-         <a href="">Business</a>
-       </li>
-       <li> 
-         <a href="">How Search works</a>
-       </li>
-     </ul>
-     <ul class="right">
+      <div> 
+        <ul>
+          <li> 
+            <a href="">Advertising</a>
+          </li>
+          <li> 
+            <a href="">Business</a>
+          </li>
+          <li> 
+            <a href="">How Search works</a>
+          </li>
+        </ul>
+      </div>
+     <div>
+      <ul>
         <li> 
           <a href="">Privacy</a>
         </li>
@@ -49,6 +71,7 @@
           <a href="">Settings</a>
         </li>
       </ul>
+    </div>
     </footer>
   </body>
 </html>
